--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>唐诗一首</title>
     </head>
   <boad>
-    <img src="54f1147933e1ae2dda9b214348aa5b50.jpg">
+    <img src="54f1147933e1ae2dda9b214348aa5b50.jpg"/>
     <h1>静夜思</h1>
     <p>床前明月光</p>
     </boad>
